city search in API, emojis and gradients..

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 </head>
 <body>
     <form class="weather-form">
-        <input   type="text" name="search" placeholder="Search City">
+        <input   class="city-input" type="text" name="search" placeholder="Search City">
         <button type="submit">Search</button>
     </form>
     
-    <div class="city-container">
-        <h1>Miami</h1>
-
+    <div class="city-container" style="display: none;">
     </div>
     
     <script src="script.js"></script>
