--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
+    <title>Weather</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <form class="weather-form">
+        <h1 class="weather-banner">Get Weather </h1>
         <input   class="city-input" type="text" name="search" placeholder="Search City">
         <button type="submit">Search</button>
     </form>
