--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div>
     <form class="weather-form">
         <h1 class="weather-banner">Get Weather </h1>
         <input   class="city-input" type="text" name="search" placeholder="Search City">
@@ -14,7 +15,7 @@
     
     <div class="city-container" style="display: none;">
     </div>
-    
+</div>
     <script src="script.js"></script>
 </body>
 </html>
